5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4382/executions/1811_2564.log
== SUBMITION (2019-06-06 19:01:58) 
-- CODE:
from numpy import *
gols_feitos = array(eval(input("digite o vetor :")))
gols_sofridos = array(eval(input("digite o vetor :")))
i = 0
v = 0
e = 0
d = 0
while(i<size(gols_feitos)):
	if(gols_feitos[i] - gols_sofridos[i] == 0):
		i = i + 1
		e = e + 1
	elif(gols_feitos[i] > gols_sofridos[i]):
		i = i + 1
		v = v + 1
	else:
		i = i + 1
		d = d + 1
z = ones(3,dtype = int):
	z[0]=v
	z[1]=e
	z[2]=d
print(z)


-- EXECUTION TIME:
0.721556
-- ERROR:
  File "/home/codebench/codes/1811/2564/main.py", line 18
    z = ones(3,dtype = int):
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:01:59) 
-- CODE:
from numpy import *
gols_feitos = array(eval(input("digite o vetor :")))
gols_sofridos = array(eval(input("digite o vetor :")))
i = 0
v = 0
e = 0
d = 0
while(i<size(gols_feitos)):
	if(gols_feitos[i] - gols_sofridos[i] == 0):
		i = i + 1
		e = e + 1
	elif(gols_feitos[i] > gols_sofridos[i]):
		i = i + 1
		v = v + 1
	else:
		i = i + 1
		d = d + 1
z = ones(3,dtype = int):
	z[0]=v
	z[1]=e
	z[2]=d
print(z)


-- ERROR:
File "XXXX", line 18
    z = ones(3,dtype = int):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 19:02:10) 
-- CODE:
from numpy import *
gols_feitos = array(eval(input("digite o vetor :")))
gols_sofridos = array(eval(input("digite o vetor :")))
i = 0
v = 0
e = 0
d = 0
while(i<size(gols_feitos)):
	if(gols_feitos[i] - gols_sofridos[i] == 0):
		i = i + 1
		e = e + 1
	elif(gols_feitos[i] > gols_sofridos[i]):
		i = i + 1
		v = v + 1
	else:
		i = i + 1
		d = d + 1
z = ones(3,dtype = int)
	z[0]=v
	z[1]=e
	z[2]=d
print(z)


-- EXECUTION TIME:
0.723073
-- ERROR:
  File "/home/codebench/codes/1811/2564/main.py", line 19
    z[0]=v
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:02:12) 
-- CODE:
from numpy import *
gols_feitos = array(eval(input("digite o vetor :")))
gols_sofridos = array(eval(input("digite o vetor :")))
i = 0
v = 0
e = 0
d = 0
while(i<size(gols_feitos)):
	if(gols_feitos[i] - gols_sofridos[i] == 0):
		i = i + 1
		e = e + 1
	elif(gols_feitos[i] > gols_sofridos[i]):
		i = i + 1
		v = v + 1
	else:
		i = i + 1
		d = d + 1
z = ones(3,dtype = int)
	z[0]=v
	z[1]=e
	z[2]=d
print(z)


-- ERROR:
File "XXXX", line 19
    z[0]=v
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:02:31) 
-- CODE:
from numpy import *
gols_feitos = array(eval(input("digite o vetor :")))
gols_sofridos = array(eval(input("digite o vetor :")))
i = 0
v = 0
e = 0
d = 0
while(i<size(gols_feitos)):
	if(gols_feitos[i] - gols_sofridos[i] == 0):
		i = i + 1
		e = e + 1
	elif(gols_feitos[i] > gols_sofridos[i]):
		i = i + 1
		v = v + 1
	else:
		i = i + 1
		d = d + 1
z = ones(3,dtype = int)
z[0]=v
z[1]=e
z[2]=d
print(z)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 19:02:34) 
-- CODE:
from numpy import *
gols_feitos = array(eval(input("digite o vetor :")))
gols_sofridos = array(eval(input("digite o vetor :")))
i = 0
v = 0
e = 0
d = 0
while(i<size(gols_feitos)):
	if(gols_feitos[i] - gols_sofridos[i] == 0):
		i = i + 1
		e = e + 1
	elif(gols_feitos[i] > gols_sofridos[i]):
		i = i + 1
		v = v + 1
	else:
		i = i + 1
		d = d + 1
z = ones(3,dtype = int)
z[0]=v
z[1]=e
z[2]=d
print(z)


-- EXECUTION TIME:
0.9406
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[7 3 2]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
digite o vetor :digite o vetor :[12  1  0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 19:02:35) 
-- CODE:
from numpy import *
gols_feitos = array(eval(input("digite o vetor :")))
gols_sofridos = array(eval(input("digite o vetor :")))
i = 0
v = 0
e = 0
d = 0
while(i<size(gols_feitos)):
	if(gols_feitos[i] - gols_sofridos[i] == 0):
		i = i + 1
		e = e + 1
	elif(gols_feitos[i] > gols_sofridos[i]):
		i = i + 1
		v = v + 1
	else:
		i = i + 1
		d = d + 1
z = ones(3,dtype = int)
z[0]=v
z[1]=e
z[2]=d
print(z)


-- EXECUTION TIME:
2.465
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
digite o vetor :digite o vetor :[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
digite o vetor :digite o vetor :[12  1  0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 19:03:48) 
-- CODE:
from numpy import *
gols_feitos = array(eval(input("digite o vetor :")))
gols_sofridos = array(eval(input("digite o vetor :")))
i = 0
v = 0
e = 0
d = 0
while(i<size(gols_feitos)):
	if(gols_feitos[i] - gols_sofridos[i] == 0):
		i = i + 1
		e = e + 1
	elif(gols_feitos[i] > gols_sofridos[i]):
		i = i + 1
		v = v + 1
	else:
		i = i + 1
		d = d + 1
z = ones(3,dtype = int)
z[0]=v
z[1]=e
z[2]=d
print(z)


-- EXECUTION TIME:
1.63464
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 19:03:49) 
-- CODE:
from numpy import *
gols_feitos = array(eval(input("digite o vetor :")))
gols_sofridos = array(eval(input("digite o vetor :")))
i = 0
v = 0
e = 0
d = 0
while(i<size(gols_feitos)):
	if(gols_feitos[i] - gols_sofridos[i] == 0):
		i = i + 1
		e = e + 1
	elif(gols_feitos[i] > gols_sofridos[i]):
		i = i + 1
		v = v + 1
	else:
		i = i + 1
		d = d + 1
z = ones(3,dtype = int)
z[0]=v
z[1]=e
z[2]=d
print(z)


-- EXECUTION TIME:
2.41161
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
